<resources>
    <string name="app_name">MoSchool</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">首页</string>
    <string name="schedule">课表</string>
    <string name="found">发现</string>
    <string name="mine">我的</string>
    <string name="title_activity_login">Sign in</string>
    <string name="score">成绩</string>
    <string name="recruit">招聘</string>
    <string name="recommend">推荐</string>
    <!-- Strings related to login -->
    <string name="prompt_username">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_user_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_studentID">学号</string>
    <string name="title_activity_register">Sign in</string>
    <string name="article_hit">一次只加载15条，查看更多内容请刷新哦。</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="school">教务处 ：http://202.199.155.34</string>
    <string name="graduation">毕设管理 ：http://202.199.155.3:8080</string>
</resources>
