<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="citi.com.moschool.main.view.MainActivity">

    <android.support.v7.widget.ContentFrameLayout
        android:id="@+id/id_frame_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
    </android.support.v7.widget.ContentFrameLayout>

    <RadioGroup
        android:id="@+id/id_radio_groub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/id_home_rbtn"
            style="@style/ButtonStyle"
            android:text="@string/home"
            android:drawableTop="@drawable/home_selector" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/id_schedule_rbtn"
            style="@style/ButtonStyle"
            android:text="@string/schedule"
            android:drawableTop="@drawable/schedule_selector"
             />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/id_found_rbtn"
            style="@style/ButtonStyle"
            android:text="@string/found"
            android:drawableTop="@drawable/found_selector" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/id_mine_rbtn"
            style="@style/ButtonStyle"
            android:text="@string/mine"
            android:drawableTop="@drawable/mine_selector" />
    </RadioGroup>

</LinearLayout>
